--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
@@ -53,3 +53,9 @@ h）单击“上线模型”，如图1-7所示：
 ##### 图1-7 上线模型
 
 ##### 注意：TCP模型发布后必须上线模型，端口才能生效，否则无法使用。
+
+i）上线成功，TCP模型图标变成绿色打勾，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_8.png)
+
+##### 图1-8 上线成功
