--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
@@ -9,3 +9,13 @@
 a）Jenkins：是一个开源的、提供友好操作界面的持续集成工具，主要用于持续、自动地构建或测试软件项目。
 
 b）CI(Continuous Integration，持续集成)：是一种软件开发实践，强调开发人员提交新代码之后，立刻进行构建和测试，根据测试结果，可以确定新代码和原有代码是否正确集成在一起。
+
+c）CD(Continuous Delivery，持续交付)：是在持续集成的基础上，将集成后的代码部署到更贴近真实的运行环境中，比如完成单元测试后，可以将代码部署到测试环境中测试，若代码没有问题，便可以继续手动部署到生产环境。
+
+#### 1.2 CI工作原理及所需参数说明
+
+本节为您介绍全自动开发平台对接Jenkins进行持续集成的工作原理以及会对构建镜像包所需参数进行说明。
+
+##### 1.2.1 平台对接Jenkins进行持续集成的工作原理
+
+a）全自动开发平台对外提供构建镜像包所需的项目下载包地址以及相关所需参数信息。
