--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
@@ -29,3 +29,15 @@ d）镜像包生成后，平台便会调用Jenkins接口获取到完整的构建
 ##### 1.2.2 构建镜像包所需参数说明
 
 a）项目下载包地址：http://swg.feisuanyz.com/download/offlineDataPackage
+
+请求方式：GET
+
+b）头部请求参数 access_key_id、access_key_secret
+
+获取方式：
+
+b1）使用主账号登录全自动开发平台，进入控制台，单击右上角头像图标，选择“AccessKey管理”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/28tcp/udp_1.png)
+
+##### 图1-1 TCP/UDP模型管理
