--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
@@ -41,3 +41,11 @@ b1）使用主账号登录全自动开发平台，进入控制台，单击右上
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/28tcp/udp_1.png)
 
 ##### 图1-1 TCP/UDP模型管理
+
+b2）进入AccessKey管理页面，便可获取到` AccessKey ID `以及` AccessKey Secret `的值，即` access_key_id `和` access_key_secret `的值。
+
+##### 注意：AccessKey ID 以及AccessKey Secret的值需确保在有效期内，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_2.png)
+
+##### 图1-2 查看AccessKey ID及Secret值
