--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
@@ -49,3 +49,13 @@ b2）进入AccessKey管理页面，便可获取到` AccessKey ID `以及` Access
 ![1-2](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_2.png)
 
 ##### 图1-2 查看AccessKey ID及Secret值
+
+c）请求参数
+
+c1）environmentIdcId：环境记录ID；c2）releaseRecordId：发布记录ID；c3）projectName：项目名称。
+
+以上三个参数进行项目发版操作后生成。
+
+#### 1.3 配置JenkinsConfig信息
+
+本节为您介绍如何在全自动开发平台配置JenkinConfig信息。
