--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
@@ -69,3 +69,13 @@ a）进入全自动开发平台“配置组管理”功能模块，单击“defa
 ##### 图1-3 默认配置组详情页面
 
 b）单击右上角“同步”按钮，同步最新配置组字段jenkinsConfig，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_4.png)
+
+##### 图1-4 同步字段
+
+c）在需要Jenkins构建的环境填写jenkinsConfig配置信息，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_5.png)
+
+##### 图1-5 填写配置信息
