--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
@@ -91,3 +91,15 @@ c3）若对于配置信息不清晰，可以询问运维人员获取。
 d）填写完成后，单击“提交”即可。
 
 #### 1.4 项目发版查看镜像包地址
+
+配置完JenkinsConfig信息后，需进行项目发版操作才可生成镜像包，从而查看到镜像包地址进行后续事宜。
+
+本节为您介绍如何通过项目发版查看镜像包地址。
+
+##### 1.4.1 操作步骤
+
+a）进入全自动开发平台，单击需生成镜像包项目卡片上的配置按钮，选择“发版”，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_6.png)
+
+##### 图1-6 选择发版
