--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/28. 对接Jenkins进行CI和CD/1. 对接Jenkins进行CI和CD.md
@@ -115,3 +115,15 @@ c）稍等2分钟后，再次单击项目卡片上的配置按钮，选择“发
 ![1-8](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_8.png)
 
 ##### 图1-8 选择发版记录
+
+d）进入发版记录页面，找到刚发版的发版记录，单击“查看构建”，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_9.png)
+
+##### 图1-9 发版记录页面
+
+e）进入发版构建记录页面，在对应的环境名称下，单击“构建详情”，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/zc-image/29jenkins/jenkins_10.png)
+
+##### 图1-10 发版构建记录页面
