--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
@@ -9,3 +9,14 @@
 本案例用于实现HelloWorld输出，主要分为以下两步：
 
 a）创建项目；b）创建接口
+
+##### 1.1.2 创建项目
+
+a）在全自动开发平台项目管理页面，单击“创建项目”新增HelloWorld微服务项目，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_1.png)
+
+##### 图1-1 项目管理页面
+
+b）进入新增项目页面，输入新增项目的相关信息，单击“确定”，如图1-2所示：
+
