--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
@@ -20,3 +20,14 @@ a）在全自动开发平台项目管理页面，单击“创建项目”新增H
 
 b）进入新增项目页面，输入新增项目的相关信息，单击“确定”，如图1-2所示：
 
+![1-2](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-1_img.png)
+
+##### 图1-2 新增项目页面
+
+c）进入项目加载项页面，添加工具的输出结果组件，单击“加载应用”，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-2_img.png)
+
+##### 图1-3 添加组件
+
+##### 说明：
