--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
@@ -43,3 +43,14 @@ d）系统提示加载成功，项目卡片显示当前状态为“ 正常运行
 ##### 图1-4 项目正常运行
 
 ##### 说明：若项目卡片显示当前状态为“ 已停用 ”，您可以单击已停用按钮启动项目，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-3_img.png)
+
+##### 图1-5 已停用状态下启动项目
+
+##### 1.1.3 创建项目
+
+a）单击项目卡片，进入到平台功能模块界面，系统默认显示“接口管理”页面，单击“新增接口模块”，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_7.png)
+
