--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
@@ -107,3 +107,13 @@ i）单击“进入模型编辑”，进入窗体视图页面，如图1-15所示
 ![1-15](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-11_img.png)
 
 ##### 图1-15 窗体视图页面
+
+j）连接组件流程图，如图1-16所示：
+
+![1-16](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-12_img.png)
+
+##### 图1-16 连接组件流程图
+
+k）选中输出结果组件，配置“响应结果”，选择成功的输出结果项，如图1-17所示：
+
+![1-17](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-13_img.png)
