--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 如何实现HelloWorld.md
@@ -117,3 +117,15 @@ j）连接组件流程图，如图1-16所示：
 k）选中输出结果组件，配置“响应结果”，选择成功的输出结果项，如图1-17所示：
 
 ![1-17](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-13_img.png)
+
+##### 图1-17 配置响应结果
+
+l）配置“输出项值”，输入HelloWorld，如图1-18所示：
+
+![1-18](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-14_img.png)
+
+##### 图1-18 配置输出项值
+
+m）单击“保存并退出”，保存接口流程图配置，如图1-19所示：
+
+![1-19](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-14_2.png)
