--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/1. 如何实现HelloWorld.md
@@ -129,3 +129,17 @@ l）配置“输出项值”，输入HelloWorld，如图1-18所示：
 m）单击“保存并退出”，保存接口流程图配置，如图1-19所示：
 
 ![1-19](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-14_2.png)
+
+##### 图1-19 保存接口流程图配置
+
+n）回到模型页面，单击“提交”，提交接口流程图配置，系统提示操作成功，如图1-20所示：
+
+![1-20](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-14_3.png)
+
+##### 图1-20 提交接口流程图配置
+
+o）选择“... > 发布接口”，系统提示操作成功，如图1-21所示：
+
+![1-21](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-14_4.png)
+
+##### 图1-21 发布接口
