--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/1. 如何实现HelloWorld.md
@@ -143,3 +143,13 @@ o）选择“... > 发布接口”，系统提示操作成功，如图1-21所示
 ![1-21](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-14_4.png)
 
 ##### 图1-21 发布接口
+
+p）选择“... > 测试用例”，进行接口的测试，如图1-22所示：
+
+![1-22](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-14_5.png)
+
+##### 图1-22 测试接口
+
+q）进入测试用例页面，勾选当前用例，单击“执行”进行接口测试，如图1-23所示：
+
+![1-23](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-17_img.png)
