--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/1. 如何实现HelloWorld.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/1. 如何实现HelloWorld.md
@@ -153,3 +153,11 @@ p）选择“... > 测试用例”，进行接口的测试，如图1-22所示：
 q）进入测试用例页面，勾选当前用例，单击“执行”进行接口测试，如图1-23所示：
 
 ![1-23](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-17_img.png)
+
+##### 图1-23 执行用例
+
+r）页面下方自动弹出测试用例详情页面，滑动滚动条单击“响应内容”，查看接口测试结果，如图1-24所示：
+
+![1-24](https://www.feisuanyz.com/fsimage/alcj-image/cj_1-18_img.png)
+
+##### 图1-24 查看接口测试结果
