--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -7,3 +7,13 @@
 ##### 2.1.1 操作步骤
 
 本案例用于实现基础运算操作，分为以下三步：
+
+a）创建项目；b）创建实体模型；c）创建接口
+
+##### 2.1.2 创建项目
+
+a）在全自动开发平台项目管理页面，单击“创建项目”新增基础运算微服务项目，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_1.png)
+
+##### 图2-1 项目管理页面
