--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -51,3 +51,15 @@ d）系统提示加载成功，项目卡片显示当前状态为“ 正常运行
 ![2-6](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_6_img.png)
 
 ##### 图2-6 已停用状态下启动项目
+
+##### 2.1.3 创建实体模型
+
+a）单击项目卡片，进入平台功能模块界面，选择“实体模型”功能模块，单击“新增实体模型模块”，如图2-7所示：
+
+![2-7](https://www.feisuanyz.com/fsimage/alcj-image/st_2_7.png)
+
+##### 图2-7 实体模型页面
+
+b）进入“新增实体模型模块”页面，填写模块的名称和描述，如图2-8所示：
+
+![2-8](https://www.feisuanyz.com/fsimage/alcj-image/st_2_8.png)
