--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -73,3 +73,13 @@ d）选中已创建的实体模型模块，单击“+”按钮，选择“新增
 ![2-9](https://www.feisuanyz.com/fsimage/alcj-image/st_2_9.png)
 
 ##### 图2-9 选择新增实体模型
+
+e）进入新增实体模块页面，填写实体模型的名称、描述及字段信息，如图2-10所示：
+
+![2-10](https://www.feisuanyz.com/fsimage/alcj-image/st_2_10.png)
+
+##### 图2-10 填写实体模型信息
+
+f）填写完成后，单击“提交”，系统提示新增成功。
+
+##### 2.1.4 创建接口
