--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -105,3 +105,16 @@ c）选中创建好的接口模块，单击“+”按钮，选择“新增接口
 d）填写接口的基本信息，填写完成后，单击“下一步”，如图2-14所示：
 
 ![2-14](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_10.png)
+
+##### 图2-14 填写接口基本信息
+
+e）进入入参列表页面，单击“输出结果类型配置”，配置输出结果项，如图2-15、2-16、2-17所示：
+
+![2-15](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_11.png)
+
+##### 图2-15 选择输出结果类型配置
+
+![2-16](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_12.png)
+
+##### 图2-16 配置输出结果项
+
