--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -139,3 +139,11 @@ h）进入接口模型页面，单击“进入模型编辑”，如图2-19所示
 i）进入窗体视图页面，在此处绘制接口的流程图，如图2-20所示：
 
 ![2-20](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_16.png)
+
+##### 图2-20 窗体视图页面
+
+j）选中赋值组件，配置组件的数据模型，如图2-21、2-22所示：
+
+![2-21](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_17.png)
+
+##### 图2-21 配置数据模型
