--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -157,3 +157,13 @@ k）为实体模型赋值，如图2-23、2-24所示：
 ![2-23](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_19.png)
 
 ##### 图2-23 选择模型赋值
+
+![2-24](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_20.png)
+
+##### 图2-24 填写模型数据
+
+l）选中输出结果组件，配置响应结果，如图2-25、2-26所示：
+
+![2-25](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_21.png)
+
+##### 图2-25 单击三等号按钮
