--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -167,3 +167,13 @@ l）选中输出结果组件，配置响应结果，如图2-25、2-26所示：
 ![2-25](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_21.png)
 
 ##### 图2-25 单击三等号按钮
+
+![2-26](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_22.png)
+
+##### 图2-26 选择数据
+
+m）单击未选中记录方框，配置输出项值，如图2-27、2-28、2-29、2-30所示：
+
+![2-27](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_23.png)
+
+##### 图2-27 配置输出项值
