--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -209,3 +209,11 @@ q）系统提示“操作成功”。
 r）选择“... > 发布接口”，系统提示发布成功，如图2-33所示：
 
 ![2-33](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_26.png)
+
+##### 图2-33 发布接口
+
+s）选择“... > 测试用例”，测试接口，如图2-34所示：
+
+![2-34](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_27.png)
+
+##### 图2-34 测试接口
