--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/1. 基础案例/2. 如何实现基础运算.md
@@ -217,3 +217,15 @@ s）选择“... > 测试用例”，测试接口，如图2-34所示：
 ![2-34](https://www.feisuanyz.com/fsimage/alcj-image/alsx_2_27.png)
 
 ##### 图2-34 测试接口
+
+t）进入测试用例页面，勾选当前测试用例，单击“执行”，如图2-35所示：
+
+![2-35](https://www.feisuanyz.com/fsimage/alcj-image/cj_2-23_img.png)
+
+##### 图2-35 测试用例页面
+
+u）页面下方弹出测试用例详情页面，单击“响应内容”，查看接口测试结果，如图2-36所示：
+
+![2-36](https://www.feisuanyz.com/fsimage/alcj-image/cj_2-24_img.png)
+
+##### 图2-36 查看接口测试结果
