--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -1,1 +1,11 @@
-test
+### 1. 函数应用
+
+#### 1.1 List函数应用：倒序排列list对象
+
+本节案例分别设置了list对象（学生集合）以及map对象（学生学号-学生姓名的键值对），首先将map对象添加到list中，最后将list中的学生信息根据学生学号倒序显示。
+
+本节案例是对List函数的应用，通过多次使用单函数组件以及输出结果组件进行功能实现，体现了全自动开发平台不用编写代码，通过流程设计一目了然实现功能需求的特点。
+
+##### 1.1.1 结果展示
+
+![1-1](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_18.png)
