--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -9,3 +9,13 @@
 ##### 1.1.1 结果展示
 
 ![1-1](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_18.png)
+
+##### 图1-1 结果展示
+
+##### 1.1.2 流程图设计概览
+
+![1-2](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_1.png)
+
+##### 图1-2 流程图设计概览
+
+##### 1.1.3 操作步骤
