--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -19,3 +19,11 @@
 ##### 图1-2 流程图设计概览
 
 ##### 1.1.3 操作步骤
+
+a）在全自动开发平台新增一个接口，填写接口的基本信息，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_12.png)
+
+##### 图1-3 填写接口信息
+
+b）配置接口的入口参数，即分别设置list对象（学生集合）和map对象（学生学号-学生姓名的键值对），如图1-4所示：
