--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -45,3 +45,11 @@ d1）单函数组件【初始化MAP】：用于初始化map对象，并往map对
 ##### 此处参数的填写key值和value值，先后对应。
 
 ![1-6](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_2.png)
+
+##### 图1-6 单函数组件
+
+![1-7](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_3.png)
+
+##### 图1-7 用到的函数
+
+![1-8](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_4.png)
