--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -53,3 +53,13 @@ d1）单函数组件【初始化MAP】：用于初始化map对象，并往map对
 ##### 图1-7 用到的函数
 
 ![1-8](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_4.png)
+
+##### 图1-8 传入键值对参数
+
+d2）单函数组件【将MAP添加到list】:用于将map添加到list中。用到的函数是listAndValue(List fromList,Map addMap)，需传入list学生对象和初始化完成的map对象，其中list学生对象引用的是接口参数students，map对象引用的是单函数组件【初始化MAP】的执行结果，如图1-9、图1-10、图1-11所示：
+ 
+![1-9](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_5.png)
+
+##### 图1-9 单函数组件
+
+![1-10](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_6.png)
