--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -63,3 +63,9 @@ d2）单函数组件【将MAP添加到list】:用于将map添加到list中。用
 ##### 图1-9 单函数组件
 
 ![1-10](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_6.png)
+
+##### 图1-10 用到的函数
+ 
+![1-11](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_21.png)
+
+##### 图1-11 map对象引用的执行结果
