--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -69,3 +69,10 @@ d2）单函数组件【将MAP添加到list】:用于将map添加到list中。用
 ![1-11](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_21.png)
 
 ##### 图1-11 map对象引用的执行结果
+
+d3）单函数组件【对list进行排序】：用于把添加了map对象的list对象根据学生学号倒序排序。用到的函数是sort(List list,String column,String order)，需传入list对象、排序字段名以及排序类别参数，如图1-12、图1-13所示：
+ 
+![1-12](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_7.png)
+
+##### 图1-12 单函数组件
+ 
