--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -76,3 +76,10 @@ d3）单函数组件【对list进行排序】：用于把添加了map对象的li
 
 ##### 图1-12 单函数组件
  
+![1-13](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_8.png)
+
+##### 图1-13 填写数据
+
+d4）输出结果组件：输出list对象倒序排序的结果，直接将list对象students输出即可，如图1-14、图1-15、图1-16所示：
+ 
+![1-14](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_9.png)
