--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -103,3 +103,11 @@ g）编辑测试用例，录入map对象及list对象的参数值，并启用可
 ![1-17](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_15.png)
 
 ##### 图1-17 编辑接口信息
+
+![1-18](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_16.png)
+
+##### 图1-18 编辑接口测试用例1
+
+![1-19](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_17.png)
+
+##### 图1-19 编辑接口测试用例2
