--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -111,3 +111,13 @@ g）编辑测试用例，录入map对象及list对象的参数值，并启用可
 ![1-19](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_17.png)
 
 ##### 图1-19 编辑接口测试用例2
+
+h）执行测试用例，查看测试用例执行结果，可以看到list对象倒序显示的结果，如图1-20所示：
+ 
+![1-20](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_18.png)
+
+##### 图1-20 查看执行结果
+
+i）查看可视化日志，如图1-21所示：
+ 
+![1-21](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_20.png)
