--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -121,3 +121,13 @@ h）执行测试用例，查看测试用例执行结果，可以看到list对象
 i）查看可视化日志，如图1-21所示：
  
 ![1-21](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_20.png)
+
+##### 图1-21 查看可视化日志
+
+#### 1.2 String函数应用：手机号的脱敏显示
+
+数据脱敏是指对某些敏感信息通过脱敏规则进行数据的变形，实现敏感隐私数据的可靠保护。
+
+本节案例手机号的脱敏显示通过将手机号中间四位隐藏的方式来实现手机号的隐私保护，主要涉及到String函数的应用，也是单函数、互斥条件、输出结果等组件的综合运用。
+
+##### 1.2.1 流程图设计概览
