--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -131,3 +131,13 @@ i）查看可视化日志，如图1-21所示：
 本节案例手机号的脱敏显示通过将手机号中间四位隐藏的方式来实现手机号的隐私保护，主要涉及到String函数的应用，也是单函数、互斥条件、输出结果等组件的综合运用。
 
 ##### 1.2.1 流程图设计概览
+
+![1-22](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_3.png)
+
+##### 图1-22 流程图设计
+
+##### 逻辑描述：
+
+a）输入手机号；b）通过手机号的长度及手机号首位来判断手机号的输入是否有误；c）若手机号输入有误，则返回失败；若手机号输入正确，则继续手机号的脱敏实现；d）脱敏实现过程：取手机号前3位；取手机号后4位；进行手机号的拼接；输出结果。
+
+##### 1.2.2 操作步骤
