--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -141,3 +141,15 @@ i）查看可视化日志，如图1-21所示：
 a）输入手机号；b）通过手机号的长度及手机号首位来判断手机号的输入是否有误；c）若手机号输入有误，则返回失败；若手机号输入正确，则继续手机号的脱敏实现；d）脱敏实现过程：取手机号前3位；取手机号后4位；进行手机号的拼接；输出结果。
 
 ##### 1.2.2 操作步骤
+
+a）在全自动开发平台新增一个接口，填写接口的基本信息，如图1-23所示：
+
+![1-23](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_1.png)
+
+##### 图1-23 填写基本信息
+
+b）配置接口的入口参数。
+
+此处添加了手机号参数，用于程序开头录入手机号。（字段名称：mobileNo；字段类型：String），如图1-24所示：
+
+![1-24](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_2.png)
