--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -153,3 +153,13 @@ b）配置接口的入口参数。
 此处添加了手机号参数，用于程序开头录入手机号。（字段名称：mobileNo；字段类型：String），如图1-24所示：
 
 ![1-24](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_2.png)
+
+##### 图1-24 配置入口参数
+
+c）通过拖、拽、拉的方式进行模型编辑（即流程图编辑），如图1-25、图1-26所示：
+
+![1-25](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_4.png)
+
+##### 图1-25 进入模型编辑
+
+![1-26](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_5.png)
