--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -175,3 +175,13 @@ d1）单函数组件【取手机号长度】：用于获取录入手机号的长
 ##### 图1-27 单函数组件
 
 ![1-28](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_7.png)
+
+##### 图1-28 填写数据
+
+![1-29](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_9.png)
+
+##### 图1-29 表格选择
+
+![1-30](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_8.png)
+
+##### 图1-30 参数选择
