--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -185,3 +185,11 @@ d1）单函数组件【取手机号长度】：用于获取录入手机号的长
 ![1-30](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_8.png)
 
 ##### 图1-30 参数选择
+
+d2）单函数组件【取手机号首位】：用于获取录入手机号首位的值，用到的函数为leftString(String sourceStr,int len)从左边取子字符串，需传入手机号参数mobileNo以及数值1，如图1-31、图1-32、图1-33所示：
+
+![1-31](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_10.png)
+
+##### 图1-31 单函数组件
+
+![1-32](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_11.png)
