--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -193,3 +193,15 @@ d2）单函数组件【取手机号首位】：用于获取录入手机号首位
 ##### 图1-31 单函数组件
 
 ![1-32](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_11.png)
+
+##### 图1-32 填写数据
+
+![1-33](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_12.png)
+
+##### 图1-33 表格选择
+
+d3）互斥条件组件【判断手机号】：用于判断手机号录入是否正确，即手机号长度是否为11以及手机号首位是否为1，顺序流流转条件如图1-34、图1-35、图1-36、图1-37所示：
+
+![1-34](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_13.png)
+
+##### 图1-34 互斥条件
