--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -205,3 +205,15 @@ d3）互斥条件组件【判断手机号】：用于判断手机号录入是否
 ![1-34](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_13.png)
 
 ##### 图1-34 互斥条件
+
+![1-35](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_14.png)
+
+##### 图1-35 顺序流1
+
+![1-36](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_15.png)
+
+##### 图1-36 流转条件1
+
+![1-37](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_16.png)
+
+##### 图1-37 顺序流2
