--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -217,3 +217,19 @@ d3）互斥条件组件【判断手机号】：用于判断手机号录入是否
 ![1-37](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_16.png)
 
 ##### 图1-37 顺序流2
+
+![1-38](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_17.png)
+
+##### 图1-38 流转条件2
+
+d4）单函数组件【从左取3位】：用于获取录入手机号的前3位，用到的函数为leftString(String sourceStr,int len)从左边取子字符串，需传入手机号参数mobileNo以及数值3，与单函数组件【取手机号首位】 用到的函数相同，如图1-39、图1-40、图1-41所示：
+
+![1-39](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_18.png)
+
+##### 图1-39 单函数组件
+
+![1-40](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_19.png)
+
+##### 图1-40 填写数据
+
+![1-41](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_20.png)
