--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -291,3 +291,17 @@ d8）输出结果组件【失败】：用于当录入的手机号错误时，直
 ![1-53](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_28.png)
 
 ##### 图1-53 输出结果
+
+![1-54](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_29.png)
+
+##### 图1-54 填写数据
+
+e）完成流程图编辑之后，保存并退出。
+
+f）提交并发布接口。
+
+g）编辑测试用例，录入手机号，启用可视化日志，如图1-55、图1-56所示：
+
+![1-55](https://www.feisuanyz.com/fsimage/alcj-image/chengji/49.png)
+
+##### 图1-55 编辑测试用例
