--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/1. 函数应用.md
@@ -305,3 +305,19 @@ g）编辑测试用例，录入手机号，启用可视化日志，如图1-55、
 ![1-55](https://www.feisuanyz.com/fsimage/alcj-image/chengji/49.png)
 
 ##### 图1-55 编辑测试用例
+
+![1-56](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_34.png)
+
+##### 图1-56 启用可视化日志
+
+h）执行测试用例，查看测试用例执行结果，可以看到输入的手机号已脱敏显示，如图1-57所示：
+
+![1-57](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_35.png)
+
+##### 图1-57 查看执行结果
+
+i）查看可视化日志，如图1-58所示：
+
+![1-58](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_36.png)
+
+##### 图1-58 查看可视化日志
