--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
@@ -5,3 +5,11 @@
 #### 案例背景: 在一个电商平台中，所有商品详情的数据量是相当大的，直接以文本文件方式存储在数据库容易导致存储过程缓慢、数据库存储负载过大以及不便于前端直接访问解析等问题。基于此，我们通过先将商品详情文本文件转换为HTML文件，再将HTML文件路径存储在数据库的方式，可以一定程度上缓解以上问题。
 
 本案例将为您介绍如何使用全自动开发平台来实现商品详情文本文件转换为HTML文件的功能。通过在全自动开发平台上传一份包含商品详情的文本文件，平台将读取并解析出文本文件中的内容，之后平台会对文件的内容进行处理生成对应的HTML文件，最后上传到指定的服务器，以减轻数据库存储压力同时方便前端解析展示。案例仅用到了平台中的单函数组件、SFTP方式上传组件以及输出结果组件，通过绘制组件流程图并进行相关配置，便可以实现功能，整个过程简单快捷，节省了开发时间。
+
+##### 2.1.1 效果展示
+
+在全自动开发平台测试用例页面上传需要转换的文本文件，本实例以aa.txt文件为例，如图2-1、2-2所示，执行测试用例并通过测试用例执行结果是否成功以及服务器地址上是否上传了对应HTML文件、HTML文件效果是否正确来判断功能实现结果，如图2-3、2-4所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_1.png)
+
+##### 图2-1 全自动开发平台参数录入界面
