--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
@@ -13,3 +13,15 @@
 ![2-1](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_1.png)
 
 ##### 图2-1 全自动开发平台参数录入界面
+
+![2-2](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_2.png)
+
+##### 图2-2 文本文件
+
+![2-3](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_3.png)
+
+##### 图2-3 测试用例执行结果
+
+![2-4](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_4.png)
+
+##### 图2-4 HTML文件展示结果
