--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
@@ -111,3 +111,27 @@ a）单函数组件【获取文件中的内容】
 ![2-15](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_8.png)
 
 ##### 图2-15 单函数组件【获取文件中的内容】
+
+![2-16](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_9.png)
+
+##### 图2-16 组件配置
+
+##### 函数说明：
+
+readFileToString(File file,String charsetName)：获取文件中的内容，返回字符串，如图2-17所示：
+
+![2-17](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_32.png)
+
+##### 图2-17 参数详情
+
+b）单函数组件【将文件内容转换成HTML文件】
+
+调用自定义函数generateHtml(String fileName,String fileContent)，用于将上一步得到的字符串格式文件转换成HTML文件，需传入HTML文件名以及字符串格式文件，如图2-18、图2-19所示：
+
+![2-18](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_10.png)
+
+##### 图2-18 单函数组件【将文件内容转换成HTML文件】
+
+![2-19](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_11.png)
+
+##### 图2-19 组件配置
