--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
@@ -135,3 +135,19 @@ b）单函数组件【将文件内容转换成HTML文件】
 ![2-19](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_11.png)
 
 ##### 图2-19 组件配置
+
+##### 函数说明：
+
+generateHtml(String fileName,String fileContent)：创建HTML文件，如图2-20所示：
+
+![2-20](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_33.png)
+
+##### 注意：本案例使用函数getUuid()获取24位随机编号来作为文件名，您可以自行定义。
+
+c）SFTP上传组件【SFTP方式上传】
+
+把单函数组件【将文件内容转换成HTML文件】生成的HTML文件上传到配置的服务器地址。
+
+##### 说明：文件上传存放的目录可自行配置。
+
+![2-21](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_12.png)
