--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用.md
@@ -151,3 +151,9 @@ c）SFTP上传组件【SFTP方式上传】
 ##### 说明：文件上传存放的目录可自行配置。
 
 ![2-21](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_12.png)
+
+##### 图2-20 SFTP方式上传
+
+![2-22](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_13.png)
+
+##### 图2-22 组件配置
