--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -17,3 +17,14 @@
 ![2-2](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_2.png)
 
 ##### 图2-2 文本文件
+
+![2-3](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_3.png)
+
+##### 图2-3 测试用例执行结果
+
+![2-4](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_4.png)
+
+##### 图2-4 HTML文件展示结果
+
+##### 2.1.2 准备工作
+
