--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -28,3 +28,10 @@
 
 ##### 2.1.2 准备工作
 
+a）提前安装好如图2-5所示的Xshell软件，案例执行后会生成对应HTML文件上传到配置的服务器地址上，使用Xshell登录配置的服务器地址，进入接口返回的文件路径即可查看生成的HTML文件：
+
+![2-5](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/3_1.png)
+
+##### 图2-5 Xshell软件
+
+b）提前准备一份文本文件：aa.txt（用于存储需转换的商品详情信息），如图2-6所示：
