--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -108,3 +108,12 @@ a）单函数组件【获取文件中的内容】
 
 调用系统函数readFileToString(File file,String charsetName)，用于将上传的文本文件转换字符串格式，需传入接口参数fileContent以及编码格式GB2312，如图2-15、图2-16所示：
 
+![2-15](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_8.png)
+
+##### 图2-15 单函数组件【获取文件中的内容】
+
+![2-16](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_9.png)
+
+##### 图2-16 组件配置
+
+##### 函数说明：
