--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -117,3 +117,9 @@ a）单函数组件【获取文件中的内容】
 ##### 图2-16 组件配置
 
 ##### 函数说明：
+
+readFileToString(File file,String charsetName)：获取文件中的内容，返回字符串，如图2-17所示：
+
+![2-17](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_32.png)
+
+##### 图2-17 参数详情
