--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -159,3 +159,15 @@ c）SFTP上传组件【SFTP方式上传】
 ![2-22](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_13.png)
 
 ##### 图2-22 组件配置
+
+d）输出组件
+
+用于输出SFTP上传组件将文件上传到配置的服务器地址后返回的文件路径。
+
+![2-23](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_14.png)
+
+##### 图2-23 输出组件
+
+![2-24](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_15.png)
+
+##### 图2-24 输出执行结果
