--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -171,3 +171,13 @@ d）输出组件
 ![2-24](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_15.png)
 
 ##### 图2-24 输出执行结果
+
+##### 2.1.8 操作步骤5：退出窗体视图
+
+流程图设计完成后，保存并退出窗体视图，如图2-25所示：
+
+![2-25](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_16.png)
+
+##### 图2-25 保存并退出
+
+##### 2.1.9 提交并发布接口
