--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -181,3 +181,15 @@ d）输出组件
 ##### 图2-25 保存并退出
 
 ##### 2.1.9 提交并发布接口
+
+![2-26](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_17.png)
+
+##### 图2-26 提交并发布接口
+
+##### 2.1.10 测试用例
+
+a）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-27所示：
+
+![2-27](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_18.png)
+
+##### 图2-27 使用测试用例
