--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -203,3 +203,17 @@ b）编辑测试用例，如图2-28所示：
 c）上传含有标签的HTML代码的文本文件，并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图2-29所示：
 
 ![2-29](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_20.jpeg)
+
+##### 图2-29 上传文本文件
+
+d）查看测试用例执行结果，可以看到SFTP上传组件返回的文件路径，如图2-30所示：
+
+![2-30](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_21.png)
+
+##### 图2-30 查看文件路径
+
+e）若测试用例的结果出现错误，可查看可视化日志，双击查看各个组件的节点数据进行接口的调试，如图2-31、图2-32所示：
+
+![2-31](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_22.png)
+
+##### 图2-31 查看可视化日志
