--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -243,3 +243,17 @@ a）使用Xshell软件登录配置的SFTP服务器地址，到上传的指定路
 ##### 图2-36 服务器连接配置
 
 b）连接配置的服务器到SFTP上传组件配置的目录下，如图2-37、图2-38所示：
+
+##### 注意：本案例配置的路径为/upload/Test，可点击SFTP上传组件【SFTP方式上传】查看配置的路径，HTML文件上传之后会自动生成日期文件夹和一个随机编号的子文件夹。
+
+![2-37](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_28.png)
+
+##### 图2-37 进入上传目录
+
+![2-38](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/5_29.png)
+
+##### 图2-38 服务器连接配置
+
+c）双击此文件或者右键点击传输，即可将文件下载到本地，如图2-39所示：
+
+##### 说明： 若不想下载到本地，也可以直接右键点击打开即可查看HTML文件效果。
