--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -1,1 +1,5 @@
-test
+### 2. 电商平台应用
+
+#### 2.2 基于Redis的分布式锁实现
+
+为了对某一个共享变量进行多线程同步访问，同时保证该共享变量在高并发情况下的同一时间只能被一个线程执行，我们经常需要用到分布式锁。本案例将模拟多用户下单减少商品库存数量的场景为您介绍如何使用全自动开发平台实现分布式锁功能。由于Redis具有性能高、使用方便等功能特点，较为适用于分布式锁功能，故本案例将基于Redis实现。常见的应用场景有：电商平台商品秒杀、抢优惠券等。
