--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -11,3 +11,13 @@
 本案例设置的商品初始化库存数量为10，调用初始化库存接口后，在全自动测试平台进行性能测试，设置12个并发用户同时发送下单请求（即调用分布式锁接口），此时性能测试报告显示：12个请求中，10个请求输出“调用成功”，2个请求输出“库存不足”，如图2-41所示：
 
 ![2-41](https://www.feisuanyz.com/fsimage/alcj-image/redislock/2-1.png)
+
+##### 图2-41 性能测试报告
+
+##### 2.2.2 流程图设计概览
+
+a）初始化库存接口
+
+![2-42](https://www.feisuanyz.com/fsimage/alcj-image/redislock/3-1.png)
+
+##### 图2-42 流程图
