--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -31,3 +31,11 @@ b）初始化库存接口
 ##### 图2-43 流程图
 
 逻辑描述：a1）构建分布式锁Map集合；a2）上锁，设置超时释放时间；a3）获取Redis缓存上存储的当前库存量；a4） 判断当前库存量是否小于等于0，若小于等于0，说明库存量不足，则输出库存不足；若大于0，说明库存量充足，则继续以下流程；a5）将当前库存量减1，并更新Redis缓存上存储的库存量；a6）再次获取更新后Redis缓存上的库存量；a7）输出现存库存量。
+
+c）分布式锁接口
+
+![2-44](https://www.feisuanyz.com/fsimage/alcj-image/redislock/3-2.png)
+
+##### 图2-44 流程图
+
+逻辑描述：a1）构建分布式锁Map集合；a2）上锁，设置超时释放时间；a3）获取Redis缓存上存储的当前库存量；a4）判断当前库存量是否小于等于0，若小于等于0，说明库存量不足，则输出库存不足；若大于0，说明库存量充足，则继续以下流程；a5）将当前库存量减1，并更新Redis缓存上存储的库存量；a6）再次获取更新后Redis缓存上的库存量；a7）输出现存库存量。
