--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -39,3 +39,13 @@ c）分布式锁接口
 ##### 图2-44 流程图
 
 逻辑描述：a1）构建分布式锁Map集合；a2）上锁，设置超时释放时间；a3）获取Redis缓存上存储的当前库存量；a4）判断当前库存量是否小于等于0，若小于等于0，说明库存量不足，则输出库存不足；若大于0，说明库存量充足，则继续以下流程；a5）将当前库存量减1，并更新Redis缓存上存储的库存量；a6）再次获取更新后Redis缓存上的库存量；a7）输出现存库存量。
+
+##### 2.2.2 全自动开发平台操作步骤
+
+##### 前提条件：您需要确保项目中已添加Redis缓存加载项，关于如何加载资源可参见[《SoFlu社区版快速入门教程第4.9节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)。
+
+a）创建Redis缓存资源实例
+
+![2-45](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-1.png)
+
+##### 图2-45 新增Redis缓存资源实例
