--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -49,3 +49,13 @@ a）创建Redis缓存资源实例
 ![2-45](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-1.png)
 
 ##### 图2-45 新增Redis缓存资源实例
+
+b）创建初始化库存接口
+
+b1）进入全自动开发平台“接口管理”功能模块，新增接口模块并新增初始化库存接口，填写接口的基本信息，如图2-46所示：
+
+![2-46](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-2.png)
+
+##### 图2-46 点击“接口管理”
+
+![2-47](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-3.png)
