--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -59,3 +59,11 @@ b1）进入全自动开发平台“接口管理”功能模块，新增接口模
 ##### 图2-46 点击“接口管理”
 
 ![2-47](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-3.png)
+
+##### 图2-47 填写接口的基本信息
+
+b2）单击“下一步”，该接口不需要配置参数信息，直接提交接口信息，进入模型编辑，如图2-47所示：
+
+![2-47](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-4.png)
+
+##### 图2-47 进入模型编辑
