--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -67,3 +67,13 @@ b2）单击“下一步”，该接口不需要配置参数信息，直接提交
 ![2-47](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-4.png)
 
 ##### 图2-47 进入模型编辑
+
+b3）在窗体视图页面，通过拖拽左侧组件列表中所需的组件进行流程图编辑，如图2-48所示：
+
+![2-48](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-5.png)
+
+##### 图2-48 进行流程图编辑
+
+c）初始化库存接口中组件的详细配置
+
+c1）在Redis缓存上储存初始化库存量，并设置初始化库存量为10。
