--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -77,3 +77,11 @@ b3）在窗体视图页面，通过拖拽左侧组件列表中所需的组件进
 c）初始化库存接口中组件的详细配置
 
 c1）在Redis缓存上储存初始化库存量，并设置初始化库存量为10。
+
+使用Redis组件调用Redis方法putBucket(String name, Object value)新增通用对象，用于表示初始化的库存量，传入通用对象名stock以及通用对象参数值10即可，如图2-49、图2-50所示：
+
+![2-49](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-6.png)
+
+##### 图2-49 Redis组件【初始化库存数量10】
+
+![2-50](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-7.png)
