--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -85,3 +85,11 @@ c1）在Redis缓存上储存初始化库存量，并设置初始化库存量为1
 ##### 图2-49 Redis组件【初始化库存数量10】
 
 ![2-50](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-7.png)
+
+##### 图2-50 组件配置
+
+##### 说明：此处用到的Redis方法类型为Bucket，专门用于操作通用对象，putBucket方法说明如图2-51所示：
+
+![2-51](https://www.feisuanyz.com/fsimage/alcj-image/redislock/table1.png)
+
+##### 图2-51 putBucket方法说明
