--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -93,3 +93,11 @@ c1）在Redis缓存上储存初始化库存量，并设置初始化库存量为1
 ![2-51](https://www.feisuanyz.com/fsimage/alcj-image/redislock/table1.png)
 
 ##### 图2-51 putBucket方法说明
+
+c2）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上储存的初始化库存量，传入通用对象名stock即可，如图2-52、图2-53所示：
+
+![2-52](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-8.png)
+
+##### 图2-52 Redis缓存组件【获取初始化库存量】
+
+![2-53](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-9.png)
