--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -129,3 +129,11 @@ d2）提交并发布接口，如图2-57所示：
 ##### 图2-57 提交并发布接口
 
 d3）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-58所示：
+
+![2-58](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-14.png)
+
+##### 图2-58 使用测试用例
+
+d4）执行测试用例，如图2-59所示：
+
+![2-59](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-15.png)
