--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -137,3 +137,11 @@ d3）对接口进行测试用例，检验接口实现的功能是否可以达到
 d4）执行测试用例，如图2-59所示：
 
 ![2-59](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-15.png)
+
+##### 图2-59 执行测试用例
+
+d5）通过测试用例响应内容查看接口的执行结果，data返回10说明此时Redis缓存上储存的库存数量为10，如图2-60所示：
+
+![2-60](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-16.png)
+
+##### 图2-60 查看执行结果
