--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -145,3 +145,12 @@ d5）通过测试用例响应内容查看接口的执行结果，data返回10说
 ![2-60](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-16.png)
 
 ##### 图2-60 查看执行结果
+
+e）创建分布式锁接口
+
+e1）新增分布式锁接口，填写接口的基本信息，如图2-61所示：
+
+![2-61](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-17.png)
+
+##### 图2-61 填写基本信息
+
