--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -161,3 +161,13 @@ e2）与初始化库存接口类似，分布式锁接口也不需要配置接口
 ##### 图2-62 进行流程图编辑
 
 f）分布式锁接口中组件的详细配置
+
+f1）使用单函数组件调用函数newMapInit(Object[] keyAndValue)构建分布式锁Map集合，需传入分布式锁参数名lockKey以及分布式锁参数值product_001，如图2-63所示：
+
+![2-63](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-19.png)
+
+##### 图2-63 单函数组件【构建分布式锁名】
+
+![2-64](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-20.png)
+
+##### 图2-64 组件配置
