--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -182,3 +182,12 @@ f2）使用Redis组件中调用Redis方法lock(String lockName, long leaseTime, 
 
 ##### 图2-66 组件配置
 
+f3）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上存储的当前库存量，传入初始化库存接口中创建的通用对象stock即可，如图2-67、图2-68所示：
+
+![2-67](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-23.png)
+
+##### 图2-67 Redis缓存组件【获取当前库存量】
+
+![2-68](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-24.png)
+
+##### 图2-68 组件配置
